2018-02-05 Henry Butowsky  <henryb@hush.com>

	* added  shell script bm/cch_clr.sh to clear caches. works with linux and macos

2018-02-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha04: Mayeishanism';git push
	git tag -a 4.7.3-alpha04 -m 'nm_typ yyyy-mm';git push --tags

	* Fix three bugs introduced in 10 supposedly simple lines of changes from yesterday

2018-02-03  Charlie Zender  <zender@uci.edu>

	* Add nm_typ='yyyy-mm' and better document all nm_typ's

2018-02-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha03: Super Blue Blood Moon';git push
	git tag -a 4.7.3-alpha03 -m 'nc_set_log_level(), nm_typ yyyy-mm-01, fml_nm';git push --tags

	* Ensure fml_nm works with rx nm_typ

	* Change rx to allow filenames with multiple periods for nm_typ='yyyymm' and 'yyyy-mm-01'

	* ncclimo distinguish mdl_typ from nm_typ, add 'yyyy-mm-01' rx

2018-02-01  Charlie Zender  <zender@uci.edu>

	* Alter regression output for 'make test > ~/foo 2>&1;cat ~/foo | grep FAILED | grep Unidata'

	* Add nc_set_log_level() to all binaries

	* Practice git feature-based workflow with new log_level branch

	* Verify rename bug still exists in 4.6.0.1

	* Update NCO_rgr.pl and nco_exit_lbr_rcd() for 4.6.0, 4.6.1, 4.6.2

2018-01-30  Charlie Zender  <zender@uci.edu>

	* Add HINT on --a2o for GenerateOverlapMesh failures

	* NCO 4.7.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha02: Hedgy';git push
	git tag -a 4.7.3-alpha02 -m 'AppVeyor, a2o, nco_def/inq_var_filter(), _Filter';git push --tags

	* Fix and test a2o switch to work with transpose maps

2018-01-28  Charlie Zender  <zender@uci.edu>

	* Integrate --a2o with consistenly with GenerateOverlapMesh call for all options including monotr

2018-01-26  Charlie Zender  <zender@uci.edu>

	* Pedro, Filipe, Isuru, and Xylar fixed AppVeyor failure
